--- a/src/BlazorTemplate.UI.Pages/_Imports.razor
+++ b/src/BlazorTemplate.UI.Pages/_Imports.razor
@@ -1,1 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Forms
+@using MudBlazor
+@using BlazorTemplate.UI.Components
+@using BlazorTemplate.Infrastructure.Identity.Constants
+@using Microsoft.EntityFrameworkCore
+@using System.Text
