--- a/src/BlazorTemplate.Server/App.razor
+++ b/src/BlazorTemplate.Server/App.razor
@@ -1,12 +1,35 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
-    <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
-    </Found>
-    <NotFound>
-        <PageTitle>Not found</PageTitle>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
-        </LayoutView>
-    </NotFound>
-</Router>
+﻿@using BlazorTemplate.UI.Pages
+@using BlazorTemplate.UI.Components
+@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.Routing
+
+<CascadingAuthenticationState>
+    <Router AppAssembly="@typeof(App).Assembly" AdditionalAssemblies="@(new List<System.Reflection.Assembly>(){ typeof(BlazorTemplate.UI.Pages.MainLayout).Assembly })">
+        <Found Context="routeData">
+            <AuthorizeRouteView Resource="@routeData"
+                                RouteData="@routeData"
+                                DefaultLayout="@typeof(BlazorTemplate.UI.Pages.MainLayout)">
+                <Authorizing>
+                    <text>Please wait, we are authorizing you...</text>
+                </Authorizing>
+                <NotAuthorized>
+                    @if (context.User.Identity!.IsAuthenticated)
+                    {
+                        <p>You are not authorized to access this resource.</p>
+                    }
+                    else
+                    {
+                        <RedirectToLogin />
+                    }
+                </NotAuthorized>
+            </AuthorizeRouteView>
+        </Found>
+        <NotFound>
+            <LayoutView Layout="@typeof(MainLayout)">
+                <NotFound />
+            </LayoutView>
+        </NotFound>
+    </Router>
+</CascadingAuthenticationState>
