--- a/src/BlazorTemplate.Server/Pages/_Host.cshtml
+++ b/src/BlazorTemplate.Server/Pages/_Host.cshtml
@@ -1,51 +1,11 @@
-﻿@page "/"
-@using Microsoft.AspNetCore.Components.Web
+@page "/"
+@attribute [Authorize]
+@using Microsoft.AspNetCore.Authorization
 @namespace BlazorTemplate.Server.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-<!DOCTYPE html>
-<html lang="en">
+@{
+    Layout = "_Layout";
+}
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="~/" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
-    @*
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet">*@
-    @*
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-    *@
-    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-    <link href="css/app.css" rel="stylesheet" />
-    <!-- <link href="BlazorTemplate.Server.styles.css" rel="stylesheet" /> -->
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
-</head>
-
-<body>
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
-
-    <div id="blazor-error-ui">
-        <environment include="Staging,Production">
-            An error has occurred. This application may no longer respond until
-            reloaded.
-        </environment>
-        <environment include="Development">
-            An unhandled exception has occurred. See browser dev tools for
-            details.
-        </environment>
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
-
-    <script src="_framework/blazor.server.js"></script>
-    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-</body>
-
-</html>
+<component type="typeof(App)" render-mode="ServerPrerendered" />
