--- a/src/BlazorTemplate.Server/App.razor
+++ b/src/BlazorTemplate.Server/App.razor
@@ -1,5 +1,4 @@
-﻿@using BlazorTemplate.UI.Pages
-@using BlazorTemplate.UI.Components
+﻿@using BlazorTemplate.UserInterface
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
