--- a/src/BlazorTemplate.UserInterface/Pages/UserManagement/Index.razor
+++ b/src/BlazorTemplate.UserInterface/Pages/UserManagement/Index.razor
@@ -1,6 +1,6 @@
 @page "/user-management"
 @inherits IndexBase
-@attribute [Authorize(Roles = Roles.Admin)]
+@attribute [Authorize(Roles = AuthorizeConstants.AdminRoles)]
 
 <PageTitle>User Management</PageTitle>
 
