--- a/src/BlazorTemplate.UserInterface/_Imports.razor
+++ b/src/BlazorTemplate.UserInterface/_Imports.razor
@@ -1,10 +1,15 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components.Authorization
 @using MudBlazor
 @using BlazorTemplate.Domain;
-@using BlazorTemplate.UserInterface.Components
+@using BlazorTemplate.Domain.Common;
+@using BlazorTemplate.Domain.Constants;
 @using BlazorTemplate.Infrastructure
 @using BlazorTemplate.Infrastructure.Identity
+@using BlazorTemplate.UserInterface.Themes
+@using BlazorTemplate.UserInterface.Constants
+@using BlazorTemplate.UserInterface.Components
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.EntityFrameworkCore
 @using System.Text
