--- a/src/BlazorTemplate.Server/App.razor
+++ b/src/BlazorTemplate.Server/App.razor
@@ -1,15 +1,17 @@
 ﻿@using BlazorTemplate.UserInterface
+@using BlazorTemplate.UserInterface.Pages
+@using BlazorTemplate.UserInterface.Components
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Routing
 
 <CascadingAuthenticationState>
-    <Router AppAssembly="@typeof(App).Assembly" AdditionalAssemblies="@(new List<System.Reflection.Assembly>(){ typeof(BlazorTemplate.UI.Pages.MainLayout).Assembly })">
+    <Router AppAssembly="@typeof(App).Assembly"
+        AdditionalAssemblies="@(new List<System.Reflection.Assembly>(){ typeof(BlazorTemplate.UserInterface.Components.MainLayout).Assembly })">
         <Found Context="routeData">
-            <AuthorizeRouteView Resource="@routeData"
-                                RouteData="@routeData"
-                                DefaultLayout="@typeof(BlazorTemplate.UI.Pages.MainLayout)">
+            <AuthorizeRouteView Resource="@routeData" RouteData="@routeData"
+                DefaultLayout="@typeof(BlazorTemplate.UserInterface.Components.MainLayout)">
                 <Authorizing>
                     <text>Please wait, we are authorizing you...</text>
                 </Authorizing>
