--- a/src/BlazorTemplate.UserInterface/_Imports.razor
+++ b/src/BlazorTemplate.UserInterface/_Imports.razor
@@ -1,16 +1,21 @@
-﻿@using Microsoft.AspNetCore.Components.Web
+﻿@using System.Text
+@using System.Linq
+@using System.Globalization
+@using System.Collections.Generic
+@using Microsoft.EntityFrameworkCore
+@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Authorization
 @using MudBlazor
-@using BlazorTemplate.Domain;
-@using BlazorTemplate.Domain.Common;
-@using BlazorTemplate.Domain.Constants;
+@using BlazorTemplate.Domain
+@using BlazorTemplate.Domain.Common
+@using BlazorTemplate.Domain.Constants
+@using BlazorTemplate.Application.Services
+@using BlazorTemplate.Application.Interfaces
 @using BlazorTemplate.Infrastructure
 @using BlazorTemplate.Infrastructure.Identity
 @using BlazorTemplate.UserInterface.Themes
 @using BlazorTemplate.UserInterface.Constants
 @using BlazorTemplate.UserInterface.Components
-@using Microsoft.AspNetCore.Authorization
-@using Microsoft.EntityFrameworkCore
-@using System.Text
-@using System.Globalization
