--- a/src/BlazorTemplate.UserInterface/Components/NavMenu.razor
+++ b/src/BlazorTemplate.UserInterface/Components/NavMenu.razor
@@ -8,7 +8,7 @@
                 Companies
             </MudNavLink>
         </AuthorizeView>
-        <AuthorizeView Roles="@AuthorizeConstants.AdminRoles">
+        <AuthorizeView Roles="@Roles.Admin">
             <MudNavLink Href="user-management" Icon="@Icons.Material.Filled.ManageAccounts">
                 User Management
             </MudNavLink>
