--- a/src/BlazorTemplate.UserInterface/Components/ProfileMenu.razor
+++ b/src/BlazorTemplate.UserInterface/Components/ProfileMenu.razor
@@ -1,6 +1,6 @@
 @using Microsoft.AspNetCore.Components.Authorization
-@using BlazorTemplate.Domain
-@using BlazorTemplate.Domain.Extensions
+@using ${repo_name}.Domain
+@using ${repo_name}.Domain.Extensions
 
 <MudMenu Direction="Direction.Left" OffsetX="true" Dense="true" Class="mt-1 ml-4">
     <ActivatorContent>
