--- a/src/BlazorTemplate.Server/Pages/Account/AccessDenied.cshtml
+++ b/src/BlazorTemplate.Server/Pages/Account/AccessDenied.cshtml
@@ -1,5 +1,5 @@
 @page
-@model BlazorTemplate.Server.Pages.Account.AccessDenied
+@model ${repo_name}.Server.Pages.Account.AccessDenied
 
 @{
     ViewData["Title"] = "Access denied";
