--- a/src/BlazorTemplate.Server/Pages/Account/Lockout.cshtml
+++ b/src/BlazorTemplate.Server/Pages/Account/Lockout.cshtml
@@ -1,5 +1,5 @@
 @page
-@model BlazorTemplate.Server.Pages.Account.Confirmation
+@model ${repo_name}.Server.Pages.Account.Confirmation
 
 @{
     ViewData["Title"] = "Your account is locked.";
