--- a/src/BlazorTemplate.Server/Pages/Account/Login.cshtml
+++ b/src/BlazorTemplate.Server/Pages/Account/Login.cshtml
@@ -1,5 +1,5 @@
 @page
-@model BlazorTemplate.Server.Pages.Account.LoginModel
+@model ${repo_name}.Server.Pages.Account.LoginModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
