--- a/src/BlazorTemplate.Server/Pages/Account/Logout.cshtml
+++ b/src/BlazorTemplate.Server/Pages/Account/Logout.cshtml
@@ -1,7 +1,7 @@
 @page
 @attribute [IgnoreAntiforgeryToken]
 @using Microsoft.AspNetCore.Identity
-@using BlazorTemplate.Infrastructure.Identity
+@using ${repo_name}.Infrastructure.Identity
 @inject SignInManager<User> SignInManager
 
 @functions {
