--- a/src/BlazorTemplate.Server/Pages/Account/Register.cshtml
+++ b/src/BlazorTemplate.Server/Pages/Account/Register.cshtml
@@ -1,5 +1,5 @@
 @page
-@model BlazorTemplate.Server.Pages.Account.RegisterModel
+@model ${repo_name}.Server.Pages.Account.RegisterModel
 
 @{
     ViewData["Title"] = "Register";
