--- a/src/BlazorTemplate.Server/Pages/_Layout.cshtml
+++ b/src/BlazorTemplate.Server/Pages/_Layout.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Components.Web
-@namespace BlazorTemplate.Server.Pages
+@namespace ${repo_name}.Server.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
