--- a/src/BlazorTemplate.Server/Pages/Account/Confirmation.cshtml
+++ b/src/BlazorTemplate.Server/Pages/Account/Confirmation.cshtml
@@ -1,5 +1,5 @@
 @page
-@model ${repo_name}.Server.Pages.Account.Confirmation
+@model BlazorTemplate.Server.Pages.Account.Confirmation
 
 @{
     ViewData["Title"] = "Confirm your account";
