--- a/src/BlazorTemplate.Server/Pages/Account/_Layout.cshtml
+++ b/src/BlazorTemplate.Server/Pages/Account/_Layout.cshtml
@@ -1,11 +1,11 @@
-@namespace ${repo_name}.Server.Pages.Account
+@namespace BlazorTemplate.Server.Pages.Account
 
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ${repo_name}</title>
+    <title>@ViewData["Title"] - BlazorTemplate</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
           integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
 </head>
@@ -13,7 +13,7 @@
 @*    <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" href="~/">${repo_name}</a>
+                <a class="navbar-brand" href="~/">BlazorTemplate</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
     </div>
 @*    <footer class="footer border-top pl-3 text-muted mt-2 pt-3">
         <div class="container">
-            &copy; 2023 - ${repo_name}
+            &copy; 2023 - BlazorTemplate
         </div>
     </footer>*@
 
