--- a/src/BlazorTemplate.Server/_Imports.razor
+++ b/src/BlazorTemplate.Server/_Imports.razor
@@ -6,4 +6,4 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using ${repo_name}.Server
+@using BlazorTemplate.Server
