--- a/src/BlazorTemplate.UserInterface/_Imports.razor
+++ b/src/BlazorTemplate.UserInterface/_Imports.razor
@@ -9,12 +9,12 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Authorization
 @using MudBlazor
-@using ${repo_name}.Domain
-@using ${repo_name}.Domain.Common
-@using ${repo_name}.Domain.Constants
-@using ${repo_name}.Application.Services
-@using ${repo_name}.Application.Interfaces
-@using ${repo_name}.Infrastructure
-@using ${repo_name}.Infrastructure.Identity
-@using ${repo_name}.UserInterface.Themes
-@using ${repo_name}.UserInterface.Components
+@using BlazorTemplate.Domain
+@using BlazorTemplate.Domain.Common
+@using BlazorTemplate.Domain.Constants
+@using BlazorTemplate.Application.Services
+@using BlazorTemplate.Application.Interfaces
+@using BlazorTemplate.Infrastructure
+@using BlazorTemplate.Infrastructure.Identity
+@using BlazorTemplate.UserInterface.Themes
+@using BlazorTemplate.UserInterface.Components
