--- a/src/BlazorTemplate.Server/Pages/_Host.cshtml
+++ b/src/BlazorTemplate.Server/Pages/_Host.cshtml
@@ -1,7 +1,7 @@
 @page "/"
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
-@namespace ${repo_name}.Server.Pages
+@namespace BlazorTemplate.Server.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
