--- a/src/BlazorTemplate.Web/Components/Account/Pages/ExternalLogin.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/ExternalLogin.razor
@@ -21,7 +21,7 @@
 <StatusMessage Message="@message" />
 <h1>Register</h1>
 <h2>Associate your @ProviderDisplayName account.</h2>
-<hr />
+<MudDivider />
 
 <div  class="alert alert-info">
     You've successfully authenticated with <strong>@ProviderDisplayName</strong>.
