--- a/src/BlazorTemplate.Web/Components/Account/Pages/LoginWith2fa.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/LoginWith2fa.razor
@@ -12,7 +12,7 @@
 <PageTitle>Two-factor authentication</PageTitle>
 
 <h1>Two-factor authentication</h1>
-<hr />
+<MudDivider />
 <StatusMessage Message="@message" />
 <p>Your login is protected with an authenticator app. Enter your authenticator code below.</p>
 <div class="row">
