--- a/src/BlazorTemplate.Web/Components/Account/Pages/LoginWithRecoveryCode.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/LoginWithRecoveryCode.razor
@@ -12,7 +12,7 @@
 <PageTitle>Recovery code verification</PageTitle>
 
 <h1>Recovery code verification</h1>
-<hr />
+<MudDivider />
 <StatusMessage Message="@message" />
 <p>
     You have requested to log in with a recovery code. This login will not be remembered until you provide
