--- a/src/BlazorTemplate.Web/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
@@ -11,63 +11,72 @@
 
 <PageTitle>Two-factor authentication (2FA)</PageTitle>
 
+<MudText Typo="Typo.h6" GutterBottom="true">Two-factor authentication (2FA)</MudText>
+
 <StatusMessage />
-<h3>Two-factor authentication (2FA)</h3>
+
 @if (canTrack)
 {
     if (is2faEnabled)
     {
         if (recoveryCodesLeft == 0)
         {
-            <div class="alert alert-danger">
-                <strong>You have no recovery codes left.</strong>
-                <p>You must <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a> before you can log in with a recovery code.</p>
-            </div>
+            <MudAlert Variant="Variant.Text" Severity="Severity.Error">You have no recovery codes left.</MudAlert>
+
+            <MudText Typo="Typo.body1" Class="pt-4">
+                You must <MudLink Href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</MudLink>
+                before you can log in with a recovery code.
+            </MudText>
         }
         else if (recoveryCodesLeft == 1)
         {
-            <div class="alert alert-danger">
-                <strong>You have 1 recovery code left.</strong>
-                <p>You can <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
-            </div>
+            <MudAlert Variant="Variant.Text" Severity="Severity.Warning">You have 1 recovery code left.</MudAlert>
+
+            <MudText Typo="Typo.body1" Class="pt-4">
+                You can <MudLink Href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</MudLink>.
+            </MudText>
         }
         else if (recoveryCodesLeft <= 3)
         {
-            <div class="alert alert-warning">
-                <strong>You have @recoveryCodesLeft recovery codes left.</strong>
-                <p>You should <a href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
-            </div>
+            <MudAlert Variant="Variant.Text" Severity="Severity.Warning">You have @recoveryCodesLeft recovery codes left.</MudAlert>
+
+            <MudText Typo="Typo.body1" Class="pt-4">
+                You should <MudLink Href="Account/Manage/GenerateRecoveryCodes">generate a new set of recovery codes</MudLink>.
+            </MudText>
         }
 
         if (isMachineRemembered)
         {
             <form style="display: inline-block" @formname="forget-browser" @onsubmit="OnSubmitForgetBrowserAsync" method="post">
                 <AntiforgeryToken />
-                <button type="submit" class="btn btn-primary">Forget this browser</button>
+
+                <MudStaticButton Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" FormAction="FormAction.Submit">Forget this browser</MudStaticButton>
             </form>
         }
 
-        <a href="Account/Manage/Disable2fa" class="btn btn-primary">Disable 2FA</a>
-        <a href="Account/Manage/GenerateRecoveryCodes" class="btn btn-primary">Reset recovery codes</a>
+        <MudLink Href="Account/Manage/Disable2fa">Disable 2FA</MudLink><br />
+        <MudLink Href="Account/Manage/GenerateRecoveryCodes">Reset recovery codes</MudLink>
     }
 
-    <h4>Authenticator app</h4>
+    <MudText Typo="Typo.h6" GutterBottom="true">Authenticator app</MudText>
+
     @if (!hasAuthenticator)
     {
-        <a href="Account/Manage/EnableAuthenticator" class="btn btn-primary">Add authenticator app</a>
+        <MudLink Href="Account/Manage/EnableAuthenticator">Add authenticator app</MudLink><br />
     }
     else
     {
-        <a href="Account/Manage/EnableAuthenticator" class="btn btn-primary">Set up authenticator app</a>
-        <a href="Account/Manage/ResetAuthenticator" class="btn btn-primary">Reset authenticator app</a>
+        <MudLink Href="Account/Manage/EnableAuthenticator">Set up authenticator app</MudLink><br />
+        <MudLink Href="Account/Manage/ResetAuthenticator">Reset authenticator app</MudLink>
     }
 }
 else
 {
-    <div class="alert alert-danger">
-        <strong>Privacy and cookie policy have not been accepted.</strong>
-        <p>You must accept the policy before you can enable two factor authentication.</p>
-    </div>
+    <MudAlert Variant="Variant.Text" Severity="Severity.Error">Privacy and cookie policy have not been accepted.</MudAlert>
+
+    <MudText Typo="Typo.body1" Class="pt-4">
+        You must accept the policy before you can enable two factor authentication.
+    </MudText>
 }
 
 @code {
