--- a/src/BlazorTemplate.Web/Components/Account/Pages/_Imports.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/_Imports.razor
@@ -1,2 +1,6 @@
-﻿@using BlazorTemplate.Web.Components.Account.Shared
+﻿@using MudBlazor
+@using BlazorTemplate.Web.Components.Account
+@using BlazorTemplate.Web.Components.Account.Shared
+@using BlazorTemplate.Infrastructure.Identity
+
 @layout AccountLayout
