--- a/src/BlazorTemplate.Web/Components/Account/Pages/ForgotPassword.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/ForgotPassword.razor
@@ -14,24 +14,24 @@
 
 <PageTitle>Forgot your password?</PageTitle>
 
-<h1>Forgot your password?</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <EditForm Model="Input" FormName="forgot-password" OnValidSubmit="OnValidSubmitAsync" method="post">
-            <DataAnnotationsValidator />
-            <ValidationSummary class="text-danger" role="alert" />
+<MudText Typo="Typo.h3" GutterBottom="true">Forgot your password?</MudText>
 
-            <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label for="email" class="form-label">Email</label>
-                <ValidationMessage For="() => Input.Email" class="text-danger" />
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset password</button>
-        </EditForm>
-     </div>
-</div>
+<MudText Typo="Typo.body1" GutterBottom="true">Enter your email.</MudText>
+
+<EditForm Model="Input" FormName="forgot-password" OnValidSubmit="OnValidSubmitAsync" method="post">
+    <DataAnnotationsValidator />
+
+    <MudGrid>
+        <MudItem md="12">
+            <MudStaticTextField For="@(() => Input.Email)" @bind-Value="Input.Email"
+                                Label="Email" Placeholder="name@example.com"
+                                UserAttributes="@(new() { { "autocomplete", "username" }, { "aria-required", "true" } } )" />
+        </MudItem>
+        <MudItem md="12">
+            <MudStaticButton Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" FormAction="FormAction.Submit">Reset password</MudStaticButton>
+        </MudItem>
+    </MudGrid>
+</EditForm>
 
 @code {
     [SupplyParameterFromForm]
