--- a/src/BlazorTemplate.Web/Components/Account/Pages/Manage/ChangePassword.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/Manage/ChangePassword.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Account/Manage/ChangePassword"
 
 @using System.ComponentModel.DataAnnotations
-@using Microsoft.AspNetCore.Identity
+@using BlazorTemplate.Web.Components.Account@using Microsoft.AspNetCore.Identity
 @using BlazorTemplate.Infrastructure.Identity
 
 @inject UserManager<User> UserManager
@@ -12,32 +12,34 @@
 
 <PageTitle>Change password</PageTitle>
 
-<h3>Change password</h3>
+<MudText Typo="Typo.h6" GutterBottom="true">Change password</MudText>
+
 <StatusMessage Message="@message" />
-<div class="row">
-    <div class="col-md-6">
-        <EditForm Model="Input" FormName="change-password" OnValidSubmit="OnValidSubmitAsync" method="post">
-            <DataAnnotationsValidator />
-            <ValidationSummary class="text-danger" role="alert" />
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Please enter your old password." />
-                <label for="old-password" class="form-label">Old password</label>
-                <ValidationMessage For="() => Input.OldPassword" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please enter your new password." />
-                <label for="new-password" class="form-label">New password</label>
-                <ValidationMessage For="() => Input.NewPassword" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please confirm your new password." />
-                <label for="confirm-password" class="form-label">Confirm password</label>
-                <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
-        </EditForm>
-    </div>
-</div>
+
+<EditForm Model="Input" FormName="change-password" OnValidSubmit="OnValidSubmitAsync" method="post">
+    <DataAnnotationsValidator />
+
+    <MudGrid>
+        <MudItem md="12">
+            <MudStaticTextField For="@(() => Input.OldPassword)" @bind-Value="Input.OldPassword" InputType="InputType.Password"
+                                Label="Old Password" Placeholder="old password" HelperText="Please enter your old password."
+                                UserAttributes="@(new() { { "autocomplete", "current-password" }, { "aria-required", "true" } } )" />
+        </MudItem>
+        <MudItem md="12">
+            <MudStaticTextField For="@(() => Input.NewPassword)" @bind-Value="Input.NewPassword" InputType="InputType.Password"
+                                Label="New Password" Placeholder="new password" HelperText="Please enter your new password."
+                                UserAttributes="@(new() { { "autocomplete", "new-password" }, { "aria-required", "true" } } )" />
+        </MudItem>
+        <MudItem md="12">
+            <MudStaticTextField For="@(() => Input.ConfirmPassword)" @bind-Value="Input.ConfirmPassword" InputType="InputType.Password"
+                                Label="Confirm Password" Placeholder="confirm password" HelperText="Please confirm your new password."
+                                UserAttributes="@(new() { { "autocomplete", "new-password" }, { "aria-required", "true" } } )" />
+        </MudItem>
+        <MudItem md="12">
+            <MudStaticButton Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" FormAction="FormAction.Submit">Update password</MudStaticButton>
+        </MudItem>
+    </MudGrid>
+</EditForm>
 
 @code {
     private string? message;
