--- a/src/BlazorTemplate.Web/Components/Account/Pages/Manage/Disable2fa.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/Manage/Disable2fa.razor
@@ -2,7 +2,7 @@
 
 @using Microsoft.AspNetCore.Identity
 @using BlazorTemplate.Infrastructure.Identity
-
+@using BlazorTemplate.Web.Components.Account
 @inject UserManager<User> UserManager
 @inject IdentityUserAccessor UserAccessor
 @inject IdentityRedirectManager RedirectManager
