--- a/src/BlazorTemplate.Web/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Shared/ExternalLoginPicker.razor
@@ -1,18 +1,19 @@
 ﻿@using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
+@using MudBlazor
 @using BlazorTemplate.Infrastructure.Identity
+@using MudBlazor.StaticInput
 
 @inject SignInManager<User> SignInManager
 @inject IdentityRedirectManager RedirectManager
 
 @if (externalLogins.Length == 0)
 {
-    <div>
-        <p>
-            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-            about setting up this ASP.NET application to support logging in via external services</a>.
-        </p>
-    </div>
+    <MudAlert Variant="Variant.Text" Severity="Severity.Warning">There are no external authentication services configured.</MudAlert>
+    <MudText Typo="Typo.body1" Class="pt-4">
+        See <MudLink Target="_blank" Href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</MudLink>
+        about setting up this ASP.NET application to support logging in via external services
+    </MudText>
 }
 else
 {
