--- a/src/BlazorTemplate.Web/Components/App.razor
+++ b/src/BlazorTemplate.Web/Components/App.razor
@@ -5,22 +5,28 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
-	
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-	
-	<link rel="stylesheet" href="app.css" />
-	
-    <link rel="stylesheet" href="BlazorTemplate.Web.styles.css" />
-    <link rel="icon" type="image/png" href="favicon.ico" />
-    <HeadOutlet />
+	<link href="app.css" rel="stylesheet"/>
+    <link href="BlazorTemplate.Web.styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/ico" href="favicon.ico" />
+
+    <HeadOutlet @rendermode="RenderModeForPage" />
 </head>
 
 <body>
-    <Routes />
+    <Routes @rendermode="RenderModeForPage" />
     <script src="_framework/blazor.web.js"></script>
-	<script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 
 </html>
+
+@code {
+    [CascadingParameter]
+    private HttpContext HttpContext { get; set; } = default!;
+
+    private IComponentRenderMode? RenderModeForPage => HttpContext.Request.Path.StartsWithSegments("/Account")
+        ? null
+        : InteractiveServer;
+}
