--- a/src/BlazorTemplate.Web/Components/Pages/Counter.razor
+++ b/src/BlazorTemplate.Web/Components/Pages/Counter.razor
@@ -1,12 +1,11 @@
 ﻿@page "/counter"
-@rendermode InteractiveServer
-
-<MyMudProviders />
 
 <PageTitle>Counter</PageTitle>
 
 <MudText Typo="Typo.h3" GutterBottom="true">Counter</MudText>
-<MudText Class="mb-4">Current count: @currentCount</MudText>
+
+<MudText Typo="Typo.body1" Class="mb-4">Current count: @currentCount</MudText>
+
 <MudButton Color="Color.Primary" Variant="Variant.Filled" @onclick="IncrementCount">Click me</MudButton>
 
 @code {
