--- a/src/BlazorTemplate.Web/Components/Pages/Home.razor
+++ b/src/BlazorTemplate.Web/Components/Pages/Home.razor
@@ -2,7 +2,6 @@
 
 <PageTitle>Home</PageTitle>
 
-
 <MudText Typo="Typo.h3" GutterBottom="true">Hello, world!</MudText>
 <MudText Class="mb-8">Welcome to your new app, powered by MudBlazor and the .NET 8 Template!</MudText>
 
@@ -22,7 +21,13 @@
     In this case, providers are globally set in the MainLayout.<br />
     <br />
     On the other hand, if you choose the "Per page/component" Interactivity Location,<br />
-    it is necessary to include the MyMudProviders component on every interactive page.<br />
+    it is necessary to include the <br />
+    <br />
+    &lt;MudPopoverProvider /&gt; <br />
+    &lt;MudDialogProvider /&gt; <br />
+    &lt;MudSnackbarProvider /&gt; <br />
+    <br />
+    components on every interactive page.<br />
     <br />
     If a render mode is not specified for a page, it defaults to Server-Side Rendering (SSR),<br />
     similar to this page. While MudBlazor allows pages to be rendered in SSR,<br />
@@ -51,4 +56,3 @@
         More details
     </MudLink>
 </MudText>
-
