--- a/src/BlazorTemplate.Web/Components/Account/Pages/Manage/Disable2fa.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/Manage/Disable2fa.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Account/Manage/Disable2fa"
 
 @using Microsoft.AspNetCore.Identity
-@using BlazorTemplate.Infrastructure.Identity
+@using BlazorTemplate.Web.Identity
 @using BlazorTemplate.Web.Components.Account
 @inject UserManager<User> UserManager
 @inject IdentityUserAccessor UserAccessor
