--- a/src/BlazorTemplate.Web/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Account/Manage/GenerateRecoveryCodes"
 
 @using Microsoft.AspNetCore.Identity
-@using BlazorTemplate.Infrastructure.Identity
+@using BlazorTemplate.Web.Identity
 
 @inject UserManager<User> UserManager
 @inject IdentityUserAccessor UserAccessor
