--- a/src/BlazorTemplate.Web/Components/Account/Pages/_Imports.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/_Imports.razor
@@ -1,6 +1,6 @@
 ﻿@using MudBlazor
 @using BlazorTemplate.Web.Components.Account
 @using BlazorTemplate.Web.Components.Account.Shared
-@using BlazorTemplate.Infrastructure.Identity
+@using BlazorTemplate.Web.Identity
 
 @layout AccountLayout
