--- a/src/BlazorTemplate.Web/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Shared/ExternalLoginPicker.razor
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
 @using MudBlazor
-@using BlazorTemplate.Infrastructure.Identity
+@using BlazorTemplate.Web.Identity
 @using MudBlazor.StaticInput
 
 @inject SignInManager<User> SignInManager
