--- a/src/BlazorTemplate.Web/Components/Account/Shared/ManageNavMenu.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Shared/ManageNavMenu.razor
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using BlazorTemplate.Infrastructure.Identity
+@using BlazorTemplate.Web.Identity
 
 @inject SignInManager<User> SignInManager
 
