--- a/src/BlazorTemplate.Web/Components/Account/Pages/ConfirmEmail.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/ConfirmEmail.razor
@@ -3,7 +3,7 @@
 @using System.Text
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using BlazorTemplate.Infrastructure.Identity
+@using BlazorTemplate.Web.Identity
 
 @inject UserManager<User> UserManager
 @inject IdentityRedirectManager RedirectManager
