--- a/src/BlazorTemplate.Web/Components/Account/Pages/ExternalLogin.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/ExternalLogin.razor
@@ -6,7 +6,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using BlazorTemplate.Infrastructure.Identity
+@using BlazorTemplate.Web.Identity
 
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
