--- a/src/BlazorTemplate.Web/Components/Account/Pages/ForgotPassword.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/ForgotPassword.razor
@@ -5,7 +5,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using BlazorTemplate.Infrastructure.Identity
+@using BlazorTemplate.Web.Identity
 
 @inject UserManager<User> UserManager
 @inject IEmailSender<User> EmailSender
