--- a/src/BlazorTemplate.Web/Components/Account/Pages/Login.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/Login.razor
@@ -3,7 +3,7 @@
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
-@using BlazorTemplate.Infrastructure.Identity
+@using BlazorTemplate.Web.Identity
 
 @inject SignInManager<User> SignInManager
 @inject ILogger<Login> Logger
