--- a/src/BlazorTemplate.Web/Components/Account/Pages/LoginWith2fa.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/LoginWith2fa.razor
@@ -2,7 +2,7 @@
 
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
-@using BlazorTemplate.Infrastructure.Identity
+@using BlazorTemplate.Web.Identity
 
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
