--- a/src/BlazorTemplate.Web/Components/Account/Pages/Manage/EnableAuthenticator.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/Manage/EnableAuthenticator.razor
@@ -5,7 +5,7 @@
 @using System.Text
 @using System.Text.Encodings.Web
 @using BlazorTemplate.Web.Components.Account@using Microsoft.AspNetCore.Identity
-@using BlazorTemplate.Infrastructure.Identity
+@using BlazorTemplate.Web.Identity
 
 @inject UserManager<User> UserManager
 @inject IdentityUserAccessor UserAccessor
