--- a/src/BlazorTemplate.Web/Components/Account/Pages/ResetPassword.razor
+++ b/src/BlazorTemplate.Web/Components/Account/Pages/ResetPassword.razor
@@ -4,7 +4,7 @@
 @using System.Text
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using BlazorTemplate.Infrastructure.Identity
+@using BlazorTemplate.Web.Identity
 
 @inject IdentityRedirectManager RedirectManager
 @inject UserManager<User> UserManager
